--- a/tesserectOCR/Base.lproj/Main.storyboard
+++ b/tesserectOCR/Base.lproj/Main.storyboard
@@ -1,26 +1,103 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tesserectOCR" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u3A-on-5GJ">
+                                <rect key="frame" x="0.0" y="20" width="320" height="211"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="211" id="wTg-Sx-lIZ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mvt-K5-RFf">
+                                <rect key="frame" x="204" y="239" width="100" height="80"/>
+                                <color key="backgroundColor" red="1" green="0.87141226692648932" blue="0.66959007818327421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="camera"/>
+                                <connections>
+                                    <action selector="camera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k1n-p2-UW4"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xDU-LQ-cPs">
+                                <rect key="frame" x="124" y="239" width="72" height="80"/>
+                                <color key="backgroundColor" red="1" green="0.87141226692648932" blue="0.66959007818327421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="f7P-2K-uZy"/>
+                                </constraints>
+                                <state key="normal" title="convert"/>
+                                <connections>
+                                    <action selector="convert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UB1-r9-Sbp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vnu-YO-JU8">
+                                <rect key="frame" x="16" y="239" width="100" height="80"/>
+                                <color key="backgroundColor" red="1" green="0.87141226692648932" blue="0.66959007818327421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="q1C-ef-CuM"/>
+                                </constraints>
+                                <state key="normal" title="pick"/>
+                                <connections>
+                                    <action selector="picker:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H1h-cw-nMl"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jkI-Wa-xhl">
+                                <rect key="frame" x="0.0" y="327" width="320" height="241"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="u3A-on-5GJ" firstAttribute="trailing" secondItem="jkI-Wa-xhl" secondAttribute="trailing" id="0xi-a2-Tim"/>
+                            <constraint firstItem="u3A-on-5GJ" firstAttribute="leading" secondItem="jkI-Wa-xhl" secondAttribute="leading" id="2Ce-rI-RIj"/>
+                            <constraint firstItem="xDU-LQ-cPs" firstAttribute="leading" secondItem="Vnu-YO-JU8" secondAttribute="trailing" constant="8" symbolic="YES" id="2Uc-ds-9Kc"/>
+                            <constraint firstItem="mvt-K5-RFf" firstAttribute="leading" secondItem="xDU-LQ-cPs" secondAttribute="trailing" constant="8" symbolic="YES" id="3PE-MS-oJc"/>
+                            <constraint firstItem="xDU-LQ-cPs" firstAttribute="baseline" secondItem="mvt-K5-RFf" secondAttribute="baseline" id="74c-bP-kat"/>
+                            <constraint firstItem="Vnu-YO-JU8" firstAttribute="top" secondItem="xDU-LQ-cPs" secondAttribute="top" id="9Ma-fg-ZQf"/>
+                            <constraint firstItem="mvt-K5-RFf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="CbY-uS-z76"/>
+                            <constraint firstItem="xDU-LQ-cPs" firstAttribute="baseline" secondItem="Vnu-YO-JU8" secondAttribute="firstBaseline" id="Dqz-R8-ZMQ"/>
+                            <constraint firstItem="u3A-on-5GJ" firstAttribute="centerX" secondItem="xDU-LQ-cPs" secondAttribute="centerX" id="OoX-cG-RgL"/>
+                            <constraint firstAttribute="trailing" secondItem="u3A-on-5GJ" secondAttribute="trailing" id="PUl-dl-AUF"/>
+                            <constraint firstItem="Vnu-YO-JU8" firstAttribute="top" secondItem="u3A-on-5GJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Rke-l6-N05"/>
+                            <constraint firstItem="Vnu-YO-JU8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="RoC-8c-hcA"/>
+                            <constraint firstItem="jkI-Wa-xhl" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Thl-By-x69"/>
+                            <constraint firstItem="Vnu-YO-JU8" firstAttribute="baseline" secondItem="xDU-LQ-cPs" secondAttribute="firstBaseline" id="WOa-B8-0wp"/>
+                            <constraint firstItem="xDU-LQ-cPs" firstAttribute="baseline" secondItem="mvt-K5-RFf" secondAttribute="firstBaseline" id="lgC-4L-Y0H"/>
+                            <constraint firstItem="xDU-LQ-cPs" firstAttribute="top" secondItem="mvt-K5-RFf" secondAttribute="top" id="qmH-Fj-yg7"/>
+                            <constraint firstItem="u3A-on-5GJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rau-st-kFI"/>
+                            <constraint firstItem="jkI-Wa-xhl" firstAttribute="top" secondItem="Vnu-YO-JU8" secondAttribute="bottom" constant="8" symbolic="YES" id="taj-w3-VlT"/>
+                            <constraint firstItem="u3A-on-5GJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xVg-Ux-w6T"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImage" destination="u3A-on-5GJ" id="9vQ-02-pMa"/>
+                        <outlet property="myTextField" destination="jkI-Wa-xhl" id="BCh-qh-j8Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.75" y="34.859154929577464"/>
         </scene>
     </scenes>
 </document>
